--- a/Generator/Viewer/TalentInfo.cshtml
+++ b/Generator/Viewer/TalentInfo.cshtml
@@ -129,7 +129,7 @@ Layout = "~/Views/Shared/_DashBoardForMin.cshtml";
 <div class="form-group">
 @Html.LabelFor(model => model.PerInd, new { @class = "control-label col-md-2" })
 <div class="col-md-10">
-@(HtmlUIHelper.GetSingleValueUI<M_IndustryBackground>("PerInd", ViewBag.IndustryBackgroundList, Model.PerInd))
+@Html.EditorFor(model => model.PerInd, new { htmlAttributes = new { @class = "form-control" } })
 @Html.ValidationMessageFor(model => model.PerInd, new { @class = "text-danger" })
 </div>
 </div>
